--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI='mongodb+srv://dulanjalisenarathna93:Y4PZjgjl0ZUM8Lfw@cluster0.y4flykh.mongodb.net/?retryWrites=true&w=majority'
-JWT_SECRET=dulanjali
+MONGO_URI='mongodb+srv://<username>:<password>@cluster0.mongodb.net/test?retryWrites=true&w=majority'
+JWT_SECRET=thisIsASecretKey12345
 NODE_ENV=production
